--- a/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
@@ -26,8 +26,7 @@
             <div class="col col-left">
                 <div class="search-container">
                     <form class="search-container d-flex" asp-action="Index" method="get">
-                        <input type="text" name="searchString" class=" me-2 search-input form-control"
-                            placeholder="Search Genres" />
+                        <input type="text" name="searchString" class=" me-2 search-input form-control" placeholder="Search Genres" />
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
 
                     </form>
@@ -56,7 +55,7 @@
                 <tr>
                     <td>@genre.Id</td>
                     <td>@genre.Name</td>
-                    <td>
+                    <td> 
                         <a asp-action="Details" asp-route-id="@genre.Id" class="btn btn-info">Details</a>
                         <a asp-action="Edit" asp-route-id="@genre.Id" class="btn btn-success">Edit</a>
                         <button asp-action="Delete" asp-route-id="@genre.Id" class="btn btn-danger">Delete</button>
@@ -72,16 +71,16 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-<script>
-    $(".btn-danger").click(function () {
-        if (confirm("Are you sure you want to delete this genre?")) {
-            var id = $(this).attr("asp-route-id");
-            $.post("/Genre/Delete/" + id, function (data) {
-                window.location.href = '/Genre/Index';
-            }).fail(function () {
-                alert('Error: Unable to delete.');
-            });
-        }
-    });
-</script>
+    <script>
+        $(".btn-danger").click(function () {
+            if (confirm("Are you sure you want to delete this genre?")) {
+                var id = $(this).attr("asp-route-id");
+                $.post("/Genre/Delete/" + id, function (data) {
+                    window.location.href = '/Genre/Index';
+                }).fail(function () {
+                    alert('Error: Unable to delete.');
+                });
+            }
+        });
+    </script>
 }
