--- a/Skooby.WebApp/wwwroot/css/dashboard.css
+++ b/Skooby.WebApp/wwwroot/css/dashboard.css
@@ -17,11 +17,33 @@ body {
 
 
 .skooby-dashboard {
-    margin: 71px 0;
+    margin: 500px 0px 70px 0px!important;
 }
 
 
 
+.background-div {
+    margin: 0 !important;
+    padding: 0 !important;
+    background: url(/img/hero-image.png) no-repeat;
+    background-size: cover;
+    height: 500px;
+    width: 100% !important;
+    position: absolute;
+    top: 0 !important;
+    left: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.center-text {
+    margin: 0px 100px;
+    color: white;
+    font-size: 48px;
+    font-weight: bold;
+}
 
 
 .container-wrapper {
@@ -52,6 +74,7 @@ body {
 
 
 .book-image-preview {
+    
     /* Add a width or max-width property to constrain the image size */
     max-width: 150px; /* This value can be any size you desire */
     height: auto; /* This ensures the image maintains its aspect ratio */
@@ -66,6 +89,7 @@ body {
     display: block;
 }
 .book-image {
+    border-radius: 10px;
     width: 100%; /* This makes the image fill its container */
     height: auto; /* This ensures the image maintains its aspect ratio */
     display: block;
@@ -96,9 +120,7 @@ hr {
     background-color: white;
     color: black;
     border-radius: 10px;
-    position: absolute;
-    top: 0;
-    right: -290px;
+    position: absolute; 
     height: 194px;
     box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
     -webkit-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
@@ -106,7 +128,7 @@ hr {
 }
 
 .book-image-preview:hover + .book-info-card {
-    display: block;
+    display: block!important;
  
 }
 
@@ -116,6 +138,7 @@ hr {
 }
 
 .sidebar-content {
+    max-height: 500px;
     height: 50vh;
     background-color: white;
     padding: 20px;
@@ -171,8 +194,20 @@ hr {
 }
 
 .book-title {
+    font-size: 14px;
+    font-weight: bold;
     width: 100%;
-    -webkit-mask-image: linear-gradient(90deg, #000 60%, transparent);
+    box-sizing: border-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin: 5px 0px !important;
+    /*word-break: break-all !important;*/
+    font-size: 15px;
+    width: 100%;
+    /*-webkit-mask-image: linear-gradient(90deg, #000 60%, transparent);*/
 }
 
 .author-name {
@@ -202,7 +237,7 @@ hr {
 }
 
 .book-text {
-    margin-bottom: 5px !important;
+    margin: 5px 0px!important;
 }
 
 .see-more-button {
