--- a/Skooby.WebApp/Views/Home/ViewBook.cshtml
+++ b/Skooby.WebApp/Views/Home/ViewBook.cshtml
@@ -131,7 +131,10 @@
                                 @foreach (var relatedBook in Model.RelatedBooks.Take(4))
                                 {
                                     <div class="book">
+                                        <a href="@Url.Action("ViewBook", "Home", new { id = relatedBook.Id })">
                                         <img src="@Url.Content(relatedBook.Image)" alt="@relatedBook.Name" class="book-images" />
+                                        </a>
+
                                         <p class="book-title">@relatedBook.Name</p>
                                     </div>
                                 }
@@ -264,7 +267,9 @@
                                 @foreach (var book in Model.AllBooks.Take(4))
                                 {
                                     <div class="book">
+                                        <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
                                         <img src="@Url.Content(book.Image)" alt="@book.Name" class="book-images" />
+                                        </a>
                                         <p class="book-title">@book.Name</p>
 
                                     </div>
