--- a/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Genre/Index.cshtml
@@ -26,7 +26,8 @@
             <div class="col col-left">
                 <div class="search-container">
                     <form class="search-container d-flex" asp-action="Index" method="get">
-                        <input type="text" name="searchString" class=" me-2 search-input form-control" placeholder="Search Genres" />
+                        <input type="text" name="searchString" class=" me-2 search-input form-control"
+                               placeholder="Search Genres" />
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
 
                     </form>
@@ -83,4 +84,5 @@
             }
         });
     </script>
+
 }
