--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     @RenderSection("Styles", required: false)
 </head>
+<style>
+    .content-container {
+    padding-top: 50px;
+    padding-left: 150px;
+    margin-right: auto !important;
+    margin-left: auto !important;
+    }
+</style>
 
 <body>
     @Html.Partial("_Header")
