--- a/ASI.Basecode.WebApp/wwwroot/css/main.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/main.css
@@ -15,8 +15,11 @@
     text-align: center;
 }
 
+
+
 .content-container {
-    width: 90%;
     padding-top: 50px;
+    padding-left: 200px;
+    margin-right: auto !important;
     margin-left: auto !important;
 }
