--- a/Skooby.WebApp/Views/Home/ViewBook.cshtml
+++ b/Skooby.WebApp/Views/Home/ViewBook.cshtml
@@ -1,6 +1,23 @@
 @model ASI.Basecode.Services.Models.BookDetailsViewModel
 <style>
+    p#textarea-rating-section {
+        top: 55em;
+        position: absolute; 
+        opacity:0;
+    }
 
+    .review-textarea {
+        min-height: 300px !important;
+        border-radius: 5px;
+        padding: 10px;
+        width: 100%;
+        border: 1px solid #ced4da;
+    }
+
+
+    .no-data-text {
+        color: grey;
+    }
 </style>
 
 @{
@@ -8,15 +25,13 @@
 }
 @section styles {
     <link rel="stylesheet" href="~/css/viewbook.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
-    @* <link rel="stylesheet" href="~/css/author_otherbook.css" /> *@
+    <link rel="stylesheet" href="~/css/style.css" /> 
 }
 
 @{
     double averageRating = 0;
     double roundedAverage = 0;
-
-    // Check if Model.Reviews is not null and contains elements
+     
     if (Model.Reviews != null && Model.Reviews.Any())
     {
         averageRating = Model.Reviews.Average(r => r.Rating);
@@ -33,7 +48,11 @@
                 <div class="book-image-preview">
                     <img class="book-image image-content-spacing" id="book-image"
                          src="@Url.Content(Model.Book.Image)" />
-
+                   
+                    <a class="image-content-spacing btn btn-primary download-btn" href="#textarea-rating-section"><i style="padding-right:10px;" class="fi fi-ss-bone"></i>Rate Me</a>
+                    @* <div class="btn-rate">
+                        <a href="#textarea-container">test</a>
+                    </div> *@
                 </div>
                  
             </div>
@@ -55,7 +74,7 @@
                                 <div class="stars info-spacing info-rating-main">
                                     @for (int i = 1; i <= 5; i++)
                                     {
-                                        <i class="fa-@(i <= roundedAverage ? "solid" : "regular") fa-bone star-rating-main"
+                                        <i class="fi fi-@(i <= roundedAverage ? "ss" : "rr")-bone star-rating-main"
                                            id="star-@(i)"></i>
                                     }
                                 </div>
@@ -143,7 +162,7 @@
                         }
                         else
                         {
-                            <p>No other works by this author found.</p>
+                            <p class="no-data-text">No other works by this author found.</p>
                         }
 
                         <hr />
@@ -155,33 +174,59 @@
                         </div>
 
                         
-                        <div class="textarea-container">
+                        <div class="textarea-container" id="textarea-container">
                             <div class="textarea-wrapper ">
+                                <p id="textarea-rating-section">a</p>
                                 <h4 class=" ">Your Rating</h4>
                                 <div class="stars book-rate-spacing review-padding">
                                     <button class="star-btn" onmouseover="hoverStars(1)" onmouseout="resetStars()"
                                             onclick="setRating(1)">
-                                        <i class="fa-regular fa-bone star-rating-image" id="star1"></i>
+                                        <i class="fi fi-rr-bone star-rating-image" id="star1"></i>
                                     </button>
                                     <button class="star-btn" onmouseover="hoverStars(2)" onmouseout="resetStars()"
                                             onclick="setRating(2)">
-                                        <i class="fa-regular fa-bone star-rating-image" id="star2"></i>
+                                        <i class="fi fi-rr-bone star-rating-image" id="star2"></i>
                                     </button>
                                     <button class="star-btn" onmouseover="hoverStars(3)" onmouseout="resetStars()"
                                             onclick="setRating(3)">
-                                        <i class="fa-regular fa-bone star-rating-image" id="star3"></i>
+                                        <i class="fi fi-rr-bone star-rating-image" id="star3"></i>
                                     </button>
                                     <button class="star-btn" onmouseover="hoverStars(4)" onmouseout="resetStars()"
                                             onclick="setRating(4)">
-                                        <i class="fa-regular fa-bone star-rating-image" id="star4"></i>
+                                        <i class="fi fi-rr-bone star-rating-image" id="star4"></i>
                                     </button>
                                     <button class="star-btn" onmouseover="hoverStars(5)" onmouseout="resetStars()"
                                             onclick="setRating(5)">
-                                        <i class="fa-regular fa-bone star-rating-image" id="star5"></i>
+                                        <i class="fi fi-rr-bone star-rating-image" id="star5"></i>
                                     </button>
                                 </div>
-                                <textarea class="review-textarea review-padding" rows="4" cols="50" name="comment" form="usrform" placeholder="What are your thoughts?">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="form-group">
+                                                 
+                                                <input placeholder="Your Name" class="form-control" />
+                                                <span  class="text-danger"></span>
+                                            </div>
+                                        </div>      
+                                        <div class="col">
+                                            <div class="form-group">
+                                                 
+                                                <input placeholder="Your Email" class="form-control" />
+                                                <span class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="form-group">
+                                                <textarea class="form-control review-textarea review-padding" rows="4" cols="50" name="comment" form="usrform" placeholder="What are your thoughts?">
 </textarea>
+                                            </div>
+                                        </div> 
+                                    </div>
+                                </div>
+                                
                             </div>
                             <div class="textarea-btn-container"><button type="submit" class="btn-padd btn btn-skooby review-padding">Create</button></div>
                         </div>
@@ -197,18 +242,14 @@
                             <div class="book-rating-wrapper">
                                 <h3>Book Ratings</h3>
                                 <div class="rate-review-wrapper element-book-rate">
-                                    <div class="stars rating-spacing element-book-rate">
-                                        <i class="fa-regular fa-bone star-rating-secondary element-book-rate"
-                                           id="star-1"></i>
-                                        <i class="fa-regular fa-bone star-rating-secondary element-book-rate"
-                                           id="star-2"></i>
-                                        <i class="fa-regular fa-bone star-rating-secondary element-book-rate"
-                                           id="star-3"></i>
-                                        <i class="fa-regular fa-bone star-rating-secondary element-book-rate"
-                                           id="star-4"></i>
-                                        <i class="fa-regular fa-bone star-rating-secondary element-book-rate"
-                                           id="star-5"></i>
+                                    <div class="stars info-spacing element-book-rate">
+                                        @for (int i = 1; i <= 5; i++)
+                                        {
+                                            <i class="fi fi-@(i <= roundedAverage ? "ss" : "rr")-bone star-rating-secondary element-book-rate"
+                                               id="star-@(i)"></i>
+                                        }
                                     </div>
+                                    
                                     <h6 class="rate-value rr-spacing element-book-rate avg-rating" id="avg-rating">
                                         @averageRating.ToString("0.0")
                                     </h6>
@@ -245,7 +286,7 @@
                                 }
                                 else
                                 {
-                                    <p>No barks available for this book.</p>
+                                    <p class="no-data-text">No barks available for this book.</p>
                                 }
                             </div> 
                         </div>
@@ -320,15 +361,15 @@
         stars.forEach((star, index) => {
             star.addEventListener('mouseover', function () {
                 for (let i = 0; i <= index; i++) {
-                    stars[i].classList.remove('fa-regular');
-                    stars[i].classList.add('fa-solid');
+                    stars[i].classList.remove('fi-rr-bone');
+                    stars[i].classList.add('fi-ss-bone');
                 }
             });
 
             star.addEventListener('mouseout', function () {
                 for (let i = 0; i < stars.length; i++) {
-                    stars[i].classList.remove('fa-solid');
-                    stars[i].classList.add('fa-regular');
+                    stars[i].classList.remove('fi-ss-bone');
+                    stars[i].classList.add('fi-rr-bone');
                 }
             });
         });
