--- a/ASI.Basecode.WebApp/wwwroot/css/dashboard.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/dashboard.css
@@ -82,7 +82,7 @@
 }
 
 .sidebar-content {
-    height: 50vh;
+    height: auto;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
