--- a/Skooby.WebApp/Views/Home/Index.cshtml
+++ b/Skooby.WebApp/Views/Home/Index.cshtml
@@ -82,11 +82,11 @@
                            aria-label="Search">
                     <button class="btn btn-outline-success search-button" type="submit">Search</button>
                 </form>
-                <div> 
-                    <a href="#" class="btn-text">What's New?</a>
+                <div>
+                    <a href="@Url.Action("NewBooks", "Home")" class="btn-text">What's New?</a>
                 </div>
                 <div>
-                    <a href="#" class="btn-text">Top Rated</a>
+                    <a href="@Url.Action("TopRatedBooks", "Home")" class="btn-text">Top Rated</a>
                 </div>
 
                 <hr class="filter-divider"/>
