--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 @{
+    ViewBag.ShowSidebar = true;
     ViewData["Title"] = "User Management";
 }
 
