--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="col col-right">
-                <a href="@Url.Action("Create", "Author")" class="btn btn-skooby btn-primary">Add New Author</a>
+                <a href="@Url.Action("Create", "Author")" class="btn btn-skooby btn-primary">Add New User</a>
             </div>
         </div>
 
@@ -84,39 +84,6 @@
     </div>
 </div>
  
-<h2>User Management</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>User Id</th>
-            <th>Email</th>
-            <th>Username</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
-            <tr>
-                <td>@user.Id</td>
-                <td>@user.Email</td>
-                <td>@user.UserName</td>
-                <td>
-                    @* <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary">Edit</a> *@
-                    <form asp-action="Edit" asp-route-id="@user.Id" method="get" style="display:inline;">
-                        <input type="hidden" name="id" value="@user.Id" />
-                        <button type="submit" class="btn btn-primary">Edit</button>
-                    </form>
-                    <form asp-action="Delete" asp-route-id="@user.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this user?')" style="display:inline;">
-                        <input type="hidden" name="id" value="@user.Id" />
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
 
 @section Scripts {
     <script>
