--- a/ASI.Basecode.WebApp/Views/Admin/Dashboard.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Dashboard.cshtml
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            @if (ViewBag.ShowUserList)
+            @if (User.IsInRole("SuperAdmin"))
             {
                 <div class="module-container">
                     <div class="row">
